; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_ubc_subr.c_ubc_upl_commit.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_ubc_subr.c_ubc_upl_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_UPL_SIZE_BYTES = common dso_local global i32 0, align 4
@PAGE_SHIFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ubc_upl_commit(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32* @UPL_GET_INTERNAL_PAGE_LIST(i32 %5)
  store i32* %6, i32** %3, align 8
  %7 = load i32, i32* %2, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* @MAX_UPL_SIZE_BYTES, align 4
  %10 = load i32, i32* @PAGE_SHIFT, align 4
  %11 = ashr i32 %9, %10
  %12 = call i32 @upl_commit(i32 %7, i32* %8, i32 %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @upl_deallocate(i32 %13)
  %15 = load i32, i32* %4, align 4
  ret i32 %15
}

declare dso_local i32* @UPL_GET_INTERNAL_PAGE_LIST(i32) #1

declare dso_local i32 @upl_commit(i32, i32*, i32) #1

declare dso_local i32 @upl_deallocate(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
